# brmble

./: .dockerignore  .gitattributes  .gitignore  Brmble.slnx  CLAUDE.md  README.md  THIRD-PARTY-NOTICES.txt  THIRD_PARTY_NOTICES.md  docker-compose.yml  pr-body.md  pr_body.md  pr_body_temp.md  query.graphql
.MjG/: branch-analyse-codex-Companio-visable.md
.claude/commands/: address-review.md
.github/: pr-version.json
.github/workflows/: docker-server.yml  release.yml  tests.yml
.opencode/commands/: address-review.md
.opencode/plans/: 2026-05-14-neon-d-street-heat-design.md
.superpowers/sdd/: task-4-report.md  task-5-report.md  task-6-report.md
docker-local/: .env.example  docker-compose.yml
docs/: UI_GUIDE.md  UX_DESIGN.md  games-metadata.md  mumble-integration-guide.md  tech-stack.md
docs/designs/: 2026-05-14-neon-d-street-heat-review.md
docs/investigations/: 2026-02-21-mumble-per-user-volume-controls.md  2026-04-24-neond-security-investigation.md  2026-05-05-neon-economy-investigation.md  2026-05-09-neon-d-bug-review.md  An Analysis of the Economic Architecture and Systemic Scaling in Dope Slinger Tycoon.docx  Brmblegotchi_Goals.md  Dope Slinger Tycoon Economy Breakdown.docx  Economic Architecture and Systemic Scaling.md  Example - Settings admin.md  Maybe update the plan.md  NeoN-Dope.md  Neon Dealer Mechanics Explained.md  TOdo Ingame overlay.md  acl-implementation-review-checklist.md  rps-multiplayer-investigation.md  steen-pappier-schaar.md
docs/plans/: 2026-02-14-solution-structure.md  (+182 more)
lib/native/libfvad/: CMakeLists.txt  README.md  libfvad.def
(+962 files in other folders)
